@startuml class-diagram

skinparam classAttributeIconSize 0
skinparam defaultFontSize 11
skinparam classFontSize 13
skinparam classAttributeFontSize 10
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam pageMargin 10
skinparam pageExternalColor white
skinparam pageBorderColor gray

title Theme and Content Customization - Class Diagram

package "Customization Domain Layer" {

    class Theme {
        + ThemeId : Guid
        + ProfileId : Guid?
        + CssCustomProperties : JObject
        + CreatedAt : DateTime
        + UpdatedAt : DateTime?
        --
        + Theme(profileId, cssCustomProperties)
        + Theme(cssCustomProperties)
        + SetCssCustomProperties(JObject) : void
        + UpdateCssCustomProperties(JObject) : void
    }

    class JsonContent {
        + JsonContentId : Guid
        + Name : string
        + Json : JObject
        + CreatedAt : DateTime
        + UpdatedAt : DateTime?
        --
        + JsonContent(name, json)
        + SetJson(JObject) : void
        + UpdateJson(JObject) : void
        + SetName(string) : void
    }

    class JsonContentName <<static>> {
        + {static} Hero : string = "Hero"
        + {static} BoardOfDirectors : string = "BoardOfDirectors"
        + {static} Landing : string = "Landing"
    }
}

package "Application Layer" {

    class ThemeDto {
        + ThemeId : Guid
        + ProfileId : Guid?
        + CssCustomProperties : JObject
    }

    class JsonContentDto {
        + JsonContentId : Guid
        + Name : string
        + Json : JObject
    }
}

package "Domain Events" {
    class CreatedJsonContent {
        + JsonContentId : Guid
        + Name : string
    }

    class ThemeUpdated {
        + ThemeId : Guid
        + ProfileId : Guid?
    }
}

package "Infrastructure" {
    interface ICoopDbContext {
        + Themes : DbSet<Theme>
        + JsonContents : DbSet<JsonContent>
        + SaveChangesAsync(ct) : Task<int>
    }
}

Theme .right.> ThemeDto : maps to
JsonContent .right.> JsonContentDto : maps to
JsonContent .right. JsonContentName : uses
JsonContent ..> CreatedJsonContent : raises
Theme ..> ThemeUpdated : raises

@enduml
